# mentor

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 37c61855a698_add_documents_table.py  a1b2c3d4e5f6_add_chunks_table.py  b1c2d3e4f5a6_add_conversations_messages.py  c1d2e3f4a5b6_add_web_search_to_messages.py  d1e2f3a4b5c6_stage8_curation.py  e1f2a3b4c5d6_widen_document_status.py
backend/app/: config.py  db.py  main.py
backend/app/api/: admin.py  chat.py  curation.py  documents.py  health.py  schemas.py  search.py
backend/app/chat/: citations.py  confidence.py  orchestrator.py  prompts.py  title.py
backend/app/curation/: duplicate_detector.py  gap_analyzer.py  memory_extractor.py  prompts.py  triggers.py
backend/app/ingestion/: categorizer.py  embedding.py  language.py  normalizer.py  pipeline.py
backend/app/models/: __init__.py  (+4 more)
backend/tests/: conftest.py  test_anthropic_llm.py  test_azure_openai_embeddings.py  test_chat_api.py  test_chat_edge_cases.py  test_chat_orchestrator.py  test_chunking.py  test_curation_api.py  test_curation_triggers.py  test_documents_api.py  test_duplicate_detector.py  test_embedding.py  test_gap_analyzer.py  test_ingestion_edge_cases.py  test_ingestion_pipeline.py  test_memory_extractor.py  test_openai_embeddings.py  test_search.py  test_search_edge_cases.py  test_web_search_orchestrator.py  test_web_search_providers.py
(+106 files in other folders)
